# moonwatch-rs

./: .gitignore  Cargo.toml  README.md  build.py  build_linux.py  build_windows.py  moonwatch-sample.json
share/: config-sample.json  default-config-unix.json  default-config-windows.json  install_unix.py  install_windows.bat  moonwatch-rs.service
src/watcher/: config.rs  core.rs  mod.rs
