[package]
name = "moonwatch-rs"
version = "0.1.0"
edition = "2021"
authors = ["Tomas Karabela <tkarabela@seznam.cz>"]
readme = "README.md"
repository = "https://github.com/tkarabela/moonwatch-rs"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
regex = "1.7.0"
json = "0.12.4"
anyhow = "1.0.68"
whoami = "1.3.0"
crossbeam-channel = "0.5.6"
signal-hook = "0.3.14"
sha-1 = "0.10.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.43.0", features = ["Win32_Foundation", "Win32_System_Threading",
                                            "Win32_System_SystemInformation",
                                            "Win32_UI_WindowsAndMessaging", "Win32_System_StationsAndDesktops",
                                            "Win32_UI_Input_KeyboardAndMouse"] }
